Fix TextMeshPro reference in Runtime assembly

--- a/Runtime/NuttyTools.Runtime.asmdef
+++ b/Runtime/NuttyTools.Runtime.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "NuttyTools.Runtime",
     "rootNamespace": "NuttyTools",
-    "references": [],
+    "references": [
+        "Unity.TextMeshPro"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
